# RL-SCS

./: .gitignore  CounterCreator.py  README.md  SCS_Game.py  SCS_RemoteRenderer.py  SCS_Renderer.py  Terrain.py  Tile.py  Unit.py  _utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Game_configs/: automatic_config.yml  complex_config.yml  mirrored_config_10.yml  mirrored_config_5.yml  mirrored_config_6.yml  mirrored_config_7.yml  mirrored_config_9.yml  mirrored_config_super_soldiers.yml  pretty_config.yml  r_unbalanced_config_5.yml  randomized_config_10.yml  randomized_config_5.yml  randomized_config_8.yml  randomized_config_9.yml  solo_soldier_config_10.yml  solo_soldier_config_11.yml  solo_soldier_config_12.yml  solo_soldier_config_13.yml  solo_soldier_config_14.yml  solo_soldier_config_15.yml  solo_soldier_config_16.yml  solo_soldier_config_17.yml  solo_soldier_config_18.yml  solo_soldier_config_19.yml  solo_soldier_config_20.yml  solo_soldier_config_30.yml  solo_soldier_config_4.yml  solo_soldier_config_5.yml  solo_soldier_config_6.yml  solo_soldier_config_7.yml  solo_soldier_config_8.yml  solo_soldier_config_9.yml  test_config.yml  unbalanced_config_10.yml  unbalanced_config_5.yml  unbalanced_config_6.yml  unbalanced_config_7.yml  unbalanced_config_8.yml  unbalanced_config_9.yml  unbalanced_config_fixed_setup.yml
docs/: install.md
src/: CounterCreator.py  SCS_Game.py  SCS_Renderer.py  Tile.py  Unit.py  __init__.py  _utils.py
src/example_configurations/: mirrored_config_10.yml  mirrored_config_5.yml  mirrored_config_6.yml  mirrored_config_7.yml  mirrored_config_8.yml  mirrored_config_9.yml  r_unbalanced_config_10.yml  r_unbalanced_config_7.yml  randomized_config_7.yml  unbalanced_config_10.yml  unbalanced_config_7.yml  unbalanced_config_9.yml
src/render/: Color.py  CounterCreator.py  SCS_Renderer.py
src/rl_scs/: SCS_Game.py  Terrain.py  Tile.py
src/rl_scs/example_configurations/: interactive_config.yml  mirrored_config_10.yml  mirrored_plus_config_5.yml  r_unbalanced_config_6.yml  r_unbalanced_config_8.yml  r_unbalanced_config_9.yml  randomized_config_6.yml  solo_soldier_config_4.yml  unbalanced_config_5.yml  unbalanced_config_6.yml
src/rl_scs/render/: SCS_Renderer.py
src/rl_scs/utils/: package_utils.py
src/tests/: base_test.py  test_pettingzoo.py  test_stress.py
src/utils/: package_utils.py
test/: __init__.py  base_test.py  test_pettingzoo.py  test_stress.py
